--- a/nbs/utilities/backgrounds.ipynb
+++ b/nbs/utilities/backgrounds.ipynb
@@ -45,7 +45,12 @@
     "    combine_classes, TailwindValue, is_custom_property, is_arbitrary_value\n",
     ")\n",
     "from cjm_fasthtml_tailwind.builders.colors import ColoredFactory, ColorValue, ColoredUtility\n",
-    "from cjm_fasthtml_tailwind.builders.scales import SimpleFactory, NUMERIC_SCALE"
+    "from cjm_fasthtml_tailwind.builders.scales import SimpleFactory, NUMERIC_SCALE\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -83,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_attachment_examples():\n",
     "    \"\"\"Test background attachment utilities.\"\"\"\n",
     "    assert str(bg_attachment.fixed) == \"bg-fixed\"\n",
@@ -138,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_clip_examples():\n",
     "    \"\"\"Test background clip utilities.\"\"\"\n",
     "    assert str(bg_clip.border) == \"bg-clip-border\"\n",
@@ -196,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_color_examples():\n",
     "    \"\"\"Test background color utilities with various color values.\"\"\"\n",
     "    # Test all 22 Tailwind color families\n",
@@ -255,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_opacity_examples():\n",
     "    \"\"\"Test background colors with opacity modifiers.\"\"\"\n",
     "    # Standard opacity values\n",
@@ -652,7 +657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_gradient_examples():\n",
     "    \"\"\"Test gradient background utilities.\"\"\"\n",
     "    # Test bg-none\n",
@@ -699,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_gradient_stops_examples():\n",
     "    \"\"\"Test gradient color stop utilities.\"\"\"\n",
     "    # Test from colors\n",
@@ -769,7 +774,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_gradient_composition_examples():\n",
     "    \"\"\"Test composing gradient backgrounds with color stops.\"\"\"\n",
     "    from fasthtml.common import Div\n",
@@ -920,7 +925,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_origin_examples():\n",
     "    \"\"\"Test background origin utilities.\"\"\"\n",
     "    assert str(bg_origin.border) == \"bg-origin-border\"\n",
@@ -972,7 +977,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_position_examples():\n",
     "    \"\"\"Test background position utilities.\"\"\"\n",
     "    assert str(bg_position.top_left) == \"bg-top-left\"\n",
@@ -1023,7 +1028,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_repeat_examples():\n",
     "    \"\"\"Test background repeat utilities.\"\"\"\n",
     "    assert str(bg_repeat.repeat) == \"bg-repeat\"\n",
@@ -1070,7 +1075,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_size_examples():\n",
     "    \"\"\"Test background size utilities.\"\"\"\n",
     "    assert str(bg_size.auto) == \"bg-auto\"\n",
@@ -1098,7 +1103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_backgrounds_arbitrary_examples():\n",
     "    \"\"\"Test background utilities with arbitrary values.\"\"\"\n",
     "    # Arbitrary color values\n",
@@ -1129,16 +1134,45 @@
    "execution_count": null,
    "id": "58ad984c-1d12-4f90-88f0-05cca0738a9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "  <div class=\"bg-blue-500 p-6 rounded-lg\">\n",
+       "    <h1 class=\"text-white\">Welcome</h1>\n",
+       "    <p>This is a card with a blue background</p>\n",
+       "  </div>\n",
+       "  <section class=\"bg-cover bg-center bg-no-repeat relative\">\n",
+       "    <div class=\"bg-black/50 p-8\">\n",
+       "      <h1>Hero Title</h1>\n",
+       "    </div>\n",
+       "  </section>\n",
+       "  <h1 class=\"bg-clip-text text-transparent bg-linear-to-r from-blue-500 to-purple-600 text-7xl\">Gradient Text</h1>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((div((h1(('Welcome',),{'class': 'text-white'}), p(('This is a card with a blue background',),{})),{'class': 'bg-blue-500 p-6 rounded-lg'}), section((div((h1(('Hero Title',),{}),),{'class': 'bg-black/50 p-8'}),),{'class': 'bg-cover bg-center bg-no-repeat relative'}), h1(('Gradient Text',),{'class': 'bg-clip-text text-transparent bg-linear-to-r from-blue-500 to-purple-600 text-7xl'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_backgrounds_practical_examples():\n",
+    "#|exports\n",
+    "def test_backgrounds_fasthtml_examples():\n",
     "    \"\"\"Test background utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, H1, P, Section\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import position\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position, display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Card with colored background\n",
     "    card = Div(\n",
@@ -1173,16 +1207,83 @@
     "            text.transparent,\n",
     "            bg_linear.to_r,\n",
     "            from_color.blue._500,\n",
-    "            to_color.purple._600\n",
+    "            to_color.purple._600,\n",
+    "            text._7xl\n",
     "        )\n",
     "    )\n",
     "    assert \"bg-clip-text\" in gradient_text.attrs['class']\n",
     "    assert \"bg-linear-to-r\" in gradient_text.attrs['class']\n",
     "    assert \"from-blue-500\" in gradient_text.attrs['class']\n",
     "    assert \"to-purple-600\" in gradient_text.attrs['class']\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        card,\n",
+    "        hero,\n",
+    "        gradient_text,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
     "\n",
     "# Run the tests\n",
-    "test_backgrounds_practical_examples()"
+    "test_backgrounds_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72f5d921-09d9-45d2-b829-595380470f1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_backgrounds_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
