--- a/nbs/utilities/filters.ipynb
+++ b/nbs/utilities/filters.ipynb
@@ -51,7 +51,12 @@
     "from cjm_fasthtml_tailwind.builders.colors import (\n",
     "    ColoredFactory, ColorValue, ColoredUtility, get_all_color_families,\n",
     "    get_all_shades, ColorFamily, ColorShade, SPECIAL_COLORS\n",
-    ")"
+    ")\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -82,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_control_examples():\n",
     "    \"\"\"Test filter control utilities.\"\"\"\n",
     "    assert str(filter_none) == \"filter-none\"\n",
@@ -157,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_blur_examples():\n",
     "    \"\"\"Test blur filter utilities.\"\"\"\n",
     "    # Test named blur scales\n",
@@ -216,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_brightness_examples():\n",
     "    \"\"\"Test brightness filter utilities.\"\"\"\n",
     "    # Test common brightness values\n",
@@ -269,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_contrast_examples():\n",
     "    \"\"\"Test contrast filter utilities.\"\"\"\n",
     "    # Test common contrast values\n",
@@ -355,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_drop_shadow_examples():\n",
     "    \"\"\"Test drop shadow filter utilities.\"\"\"\n",
     "    # Test named drop shadow scales\n",
@@ -442,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_grayscale_examples():\n",
     "    \"\"\"Test grayscale filter utilities.\"\"\"\n",
     "    # Test full grayscale (default)\n",
@@ -506,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_hue_rotate_examples():\n",
     "    \"\"\"Test hue rotate filter utilities.\"\"\"\n",
     "    # Test positive angles\n",
@@ -564,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_invert_examples():\n",
     "    \"\"\"Test invert filter utilities.\"\"\"\n",
     "    # Test full invert (default)\n",
@@ -618,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_saturate_examples():\n",
     "    \"\"\"Test saturate filter utilities.\"\"\"\n",
     "    # Test common saturate values\n",
@@ -671,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_sepia_examples():\n",
     "    \"\"\"Test sepia filter utilities.\"\"\"\n",
     "    # Test full sepia (default)\n",
@@ -812,7 +817,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_filters_backdrop_examples():\n",
     "    \"\"\"Test backdrop filter utilities.\"\"\"\n",
     "    # Test backdrop filter control\n",
@@ -875,10 +880,36 @@
    "execution_count": null,
    "id": "dbecc68c-7714-486b-bf66-0686e571713d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "<img src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\" alt=\"Hoverable image\" class=\"transition-all hover:blur-sm cursor-pointer\"><img src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\" alt=\"Grayscale photo\" class=\"grayscale hover:grayscale-0 transition-all duration-300\">  <div class=\"drop-shadow-lg drop-shadow-blue-500 p-6 bg-white rounded-lg\">\n",
+       "    <h1>Card Title</h1>\n",
+       "    <p>Card content</p>\n",
+       "  </div>\n",
+       "  <div class=\"backdrop-blur-md backdrop-saturate-150 bg-white/30 p-8 rounded-xl\">\n",
+       "    <p>Frosted glass content</p>\n",
+       "  </div>\n",
+       "<img src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\" alt=\"Artistic image\" class=\"brightness-110 contrast-125 saturate-150 hue-rotate-15\">  <div class=\"invert hue-rotate-180 fixed inset-0 pointer-events-none\"></div>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((img((),{'src': 'https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp', 'alt': 'Hoverable image', 'class': 'transition-all hover:blur-sm cursor-pointer'}), img((),{'src': 'https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp', 'alt': 'Grayscale photo', 'class': 'grayscale hover:grayscale-0 transition-all duration-300'}), div((h1(('Card Title',),{}), p(('Card content',),{})),{'class': 'drop-shadow-lg drop-shadow-blue-500 p-6 bg-white rounded-lg'}), div((p(('Frosted glass content',),{}),),{'class': 'backdrop-blur-md backdrop-saturate-150 bg-white/30 p-8 rounded-xl'}), img((),{'src': 'https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp', 'alt': 'Artistic image', 'class': 'brightness-110 contrast-125 saturate-150 hue-rotate-15'}), div((),{'class': 'invert hue-rotate-180 fixed inset-0 pointer-events-none'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_filters_practical_examples():\n",
+    "#|exports\n",
+    "def test_filters_fasthtml_examples():\n",
     "    \"\"\"Test filter utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Img, P, H1, Section\n",
     "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition, duration\n",
@@ -886,11 +917,12 @@
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import position, inset\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position, inset, display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Image with hover blur effect\n",
     "    image_hover = Img(\n",
-    "        src=\"/image.jpg\",\n",
+    "        src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\",\n",
     "        alt=\"Hoverable image\",\n",
     "        cls=combine_classes(\n",
     "            transition.all,\n",
@@ -902,7 +934,7 @@
     "    \n",
     "    # Grayscale image that becomes colored on hover\n",
     "    grayscale_img = Img(\n",
-    "        src=\"/photo.jpg\",\n",
+    "        src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\",\n",
     "        alt=\"Grayscale photo\",\n",
     "        cls=combine_classes(\n",
     "            grayscale.full,\n",
@@ -945,7 +977,7 @@
     "    \n",
     "    # Image with multiple filters\n",
     "    artistic_img = Img(\n",
-    "        src=\"/art.jpg\",\n",
+    "        src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\",\n",
     "        alt=\"Artistic image\",\n",
     "        cls=combine_classes(\n",
     "            brightness(110),\n",
@@ -971,9 +1003,78 @@
     "    )\n",
     "    assert \"invert\" in dark_overlay.attrs['class']\n",
     "    assert \"hue-rotate-180\" in dark_overlay.attrs['class']\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        image_hover,\n",
+    "        grayscale_img,\n",
+    "        card_shadow,\n",
+    "        frosted_glass,\n",
+    "        artistic_img,\n",
+    "        dark_overlay,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
     "\n",
     "# Run the tests\n",
-    "test_filters_practical_examples()"
+    "test_filters_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "919aa2ae-74f5-4bed-9387-75c2b385f81c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_filters_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
