--- a/nbs/utilities/flexbox_and_grid.ipynb
+++ b/nbs/utilities/flexbox_and_grid.ipynb
@@ -49,7 +49,12 @@
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    ScaledFactory, DirectionalScaledFactory, ScaleConfig, \n",
     "    ScaledUtility, SimpleFactory, SPACING_CONFIG, NUMERIC_SCALE\n",
-    ")"
+    ")\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -93,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_basis_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flex basis utilities with various scale values.\"\"\"\n",
@@ -157,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_direction_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flex direction utilities.\"\"\"\n",
@@ -206,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_wrap_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flex wrap utilities.\"\"\"\n",
@@ -261,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_flex_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flex utilities for combined grow/shrink properties.\"\"\"\n",
@@ -345,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_grow_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flex grow utilities.\"\"\"\n",
@@ -427,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_shrink_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flex shrink utilities.\"\"\"\n",
@@ -486,7 +491,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_order_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test order utilities for flex and grid items.\"\"\"\n",
@@ -550,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_template_columns_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test grid template columns utilities.\"\"\"\n",
@@ -610,7 +615,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_template_rows_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test grid template rows utilities.\"\"\"\n",
@@ -717,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_column_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test grid column utilities including span, start, and end.\"\"\"\n",
@@ -835,7 +840,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_row_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test grid row utilities including span, start, and end.\"\"\"\n",
@@ -902,7 +907,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_flow_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test grid auto flow utilities.\"\"\"\n",
@@ -1022,7 +1027,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_auto_cols_rows_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test grid auto columns and rows utilities.\"\"\"\n",
@@ -1119,7 +1124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_gap_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test gap utilities for flexbox and grid containers.\"\"\"\n",
@@ -1256,7 +1261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_justify_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test justify utilities for flex and grid containers.\"\"\"\n",
@@ -1384,7 +1389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_align_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test align utilities for flex and grid containers.\"\"\"\n",
@@ -1511,7 +1516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_place_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test place utilities for grid containers.\"\"\"\n",
@@ -1544,10 +1549,54 @@
    "execution_count": null,
    "id": "aca4f078-59ac-46a0-996e-50ec1592b184",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "  <nav class=\"flex justify-between items-center px-6 py-4\">\n",
+       "    <div class=\"font-bold\">Logo</div>\n",
+       "    <div class=\"flex gap-4\">\n",
+       "HomeAboutContact    </div>\n",
+       "<button>Sign In</button>  </nav>\n",
+       "  <div class=\"grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4\">\n",
+       "    <div class=\"p-4 bg-gray-100 rounded-full\">Card 0</div>\n",
+       "    <div class=\"p-4 bg-gray-100 rounded-full\">Card 1</div>\n",
+       "    <div class=\"p-4 bg-gray-100 rounded-full\">Card 2</div>\n",
+       "    <div class=\"p-4 bg-gray-100 rounded-full\">Card 3</div>\n",
+       "    <div class=\"p-4 bg-gray-100 rounded-full\">Card 4</div>\n",
+       "    <div class=\"p-4 bg-gray-100 rounded-full\">Card 5</div>\n",
+       "  </div>\n",
+       "  <div class=\"flex flex-col justify-center items-center min-h-screen text-center\">\n",
+       "    <h1 class=\"text-4xl font-bold\">Welcome</h1>\n",
+       "    <p>Build amazing things</p>\n",
+       "<button class=\"mt-4\">Get Started</button>  </div>\n",
+       "  <div class=\"grid grid-cols-3 grid-rows-3 gap-4 h-screen\">\n",
+       "    <header class=\"col-span-full p-4 bg-blue-500 text-white\">Dashboard</header>\n",
+       "    <aside class=\"row-span-2 p-4 bg-gray-200\">Sidebar</aside>\n",
+       "<main class=\"col-span-2 p-4\">Main Content</main>    <div class=\"p-4 bg-green-100\">Stat 1</div>\n",
+       "    <div class=\"p-4 bg-yellow-100\">Stat 2</div>\n",
+       "  </div>\n",
+       "  <div class=\"flex gap-2 items-center p-2\">\n",
+       "<button class=\"shrink-0\">Back</button>    <div class=\"grow-1 px-4 bg-gray-100 rounded-full\">Search...</div>\n",
+       "<button class=\"shrink-0\">Settings</button>  </div>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((nav((div(('Logo',),{'class': 'font-bold'}), div(('Home', 'About', 'Contact'),{'class': 'flex gap-4'}), button(('Sign In',),{})),{'class': 'flex justify-between items-center px-6 py-4'}), div((div(('Card 0',),{'class': 'p-4 bg-gray-100 rounded-full'}), div(('Card 1',),{'class': 'p-4 bg-gray-100 rounded-full'}), div(('Card 2',),{'class': 'p-4 bg-gray-100 rounded-full'}), div(('Card 3',),{'class': 'p-4 bg-gray-100 rounded-full'}), div(('Card 4',),{'class': 'p-4 bg-gray-100 rounded-full'}), div(('Card 5',),{'class': 'p-4 bg-gray-100 rounded-full'})),{'class': 'grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4'}), div((h1(('Welcome',),{'class': 'text-4xl font-bold'}), p(('Build amazing things',),{}), button(('Get Started',),{'class': 'mt-4'})),{'class': 'flex flex-col justify-center items-center min-h-screen text-center'}), div((header(('Dashboard',),{'class': 'col-span-full p-4 bg-blue-500 text-white'}), aside(('Sidebar',),{'class': 'row-span-2 p-4 bg-gray-200'}), main(('Main Content',),{'class': 'col-span-2 p-4'}), div(('Stat 1',),{'class': 'p-4 bg-green-100'}), div(('Stat 2',),{'class': 'p-4 bg-yellow-100'})),{'class': 'grid grid-cols-3 grid-rows-3 gap-4 h-screen'}), div((button(('Back',),{'class': 'shrink-0'}), div(('Search...',),{'class': 'grow-1 px-4 bg-gray-100 rounded-full'}), button(('Settings',),{'class': 'shrink-0'})),{'class': 'flex gap-2 items-center p-2'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_flexbox_and_grid_practical_examples(\n",
+    "#|exports\n",
+    "def test_flexbox_and_grid_fasthtml_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flexbox and grid utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Header, Nav, Main, Article, Aside, Footer, Img, Button, H1, H2, P\n",
@@ -1639,9 +1688,77 @@
     "    )\n",
     "    assert toolbar.attrs['class'] == \"flex gap-2 items-center p-2\"\n",
     "    assert toolbar.children[1].attrs['class'] == \"grow-1 px-4 bg-gray-100 rounded-full\"\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        nav,\n",
+    "        card_grid,\n",
+    "        hero,\n",
+    "        dashboard,\n",
+    "        toolbar,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
     "\n",
     "# Run the tests\n",
-    "test_flexbox_and_grid_practical_examples()"
+    "test_flexbox_and_grid_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7ffa001-1a5b-4c92-9901-65f39358fa1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_flexbox_and_grid_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
@@ -1741,7 +1858,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_flexbox_and_grid_helper_examples(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test helper functions for common flexbox and grid patterns.\"\"\"\n",
