--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -49,7 +49,12 @@
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    ScaledFactory, DirectionalScaledFactory, ScaleConfig, INSET_CONFIG,\n",
     "    ScaledUtility, NegativeFactory, SimpleFactory\n",
-    ")"
+    ")\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -109,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_display_examples(\n",
     "):\n",
     "    \"\"\"Test display utilities with various values.\"\"\"\n",
@@ -170,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_position_examples(\n",
     "):\n",
     "    \"\"\"Test position utilities.\"\"\"\n",
@@ -310,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_inset_examples(\n",
     "):\n",
     "    \"\"\"Test inset utilities for positioning elements.\"\"\"\n",
@@ -419,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_overflow_examples(\n",
     "):\n",
     "    \"\"\"Test overflow utilities for content handling.\"\"\"\n",
@@ -479,7 +484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_z_index_examples(\n",
     "):\n",
     "    \"\"\"Test z-index utilities for stack ordering.\"\"\"\n",
@@ -566,7 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_float_clear_examples(\n",
     "):\n",
     "    \"\"\"Test float and clear utilities for content wrapping.\"\"\"\n",
@@ -697,7 +702,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_object_examples(\n",
     "):\n",
     "    \"\"\"Test object fit and position utilities.\"\"\"\n",
@@ -783,7 +788,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_visibility_examples(\n",
     "):\n",
     "    \"\"\"Test visibility and box sizing utilities.\"\"\"\n",
@@ -901,7 +906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_aspect_columns_examples(\n",
     "):\n",
     "    \"\"\"Test aspect ratio and columns utilities.\"\"\"\n",
@@ -959,7 +964,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_columns_examples(\n",
     "):\n",
     "    \"\"\"Test columns utilities.\"\"\"\n",
@@ -1168,7 +1173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_other_utilities_examples(\n",
     "):\n",
     "    \"\"\"Test isolation, break, box decoration, and overscroll utilities.\"\"\"\n",
@@ -1212,10 +1217,38 @@
    "execution_count": null,
    "id": "59899a4f-913a-4ab9-99db-372f47aa4d8c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "  <header class=\"fixed top-0 left-0 right-0 z-50 bg-white\">\n",
+       "    <nav>Navigation</nav>\n",
+       "  </header>\n",
+       "  <aside class=\"sticky top-20 h-screen overflow-y-auto\">Sidebar content</aside>\n",
+       "  <div class=\"fixed inset-0 z-40 flex items-center justify-center bg-black/50\">\n",
+       "    <div class=\"relative z-10\">Modal content</div>\n",
+       "  </div>\n",
+       "  <div class=\"aspect-video overflow-hidden rounded-lg\">\n",
+       "<img src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\" class=\"object-cover object-center w-full h-full\">  </div>\n",
+       "  <article class=\"columns-2 gap-8 prose\">Lorem ipsum dolor sit amet...</article>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((header((nav(('Navigation',),{}),),{'class': 'fixed top-0 left-0 right-0 z-50 bg-white'}), aside(('Sidebar content',),{'class': 'sticky top-20 h-screen overflow-y-auto'}), div((div(('Modal content',),{'class': 'relative z-10'}),),{'class': 'fixed inset-0 z-40 flex items-center justify-center bg-black/50'}), div((img((),{'src': 'https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp', 'class': 'object-cover object-center w-full h-full'}),),{'class': 'aspect-video overflow-hidden rounded-lg'}), article(('Lorem ipsum dolor sit amet...',),{'class': 'columns-2 gap-8 prose'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_layout_practical_examples(\n",
+    "#|exports\n",
+    "def test_layout_fasthtml_examples(\n",
     "):\n",
     "    \"\"\"Test layout utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Img, Header, Nav, Main, Section, Article, Aside\n",
@@ -1248,7 +1281,7 @@
     "    \n",
     "    # Image with aspect ratio and object fit\n",
     "    image_container = Div(\n",
-    "        Img(src=\"image.jpg\", cls=combine_classes(object_fit.cover, object_position.center, w.full, h.full)),\n",
+    "        Img(src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\", cls=combine_classes(object_fit.cover, object_position.center, w.full, h.full)),\n",
     "        cls=combine_classes(aspect.video, overflow.hidden, rounded.lg)\n",
     "    )\n",
     "    assert image_container.attrs['class'] == \"aspect-video overflow-hidden rounded-lg\"\n",
@@ -1261,9 +1294,77 @@
     "        cls=combine_classes(columns(2), gap(8), \"prose\")\n",
     "    )\n",
     "    assert article.attrs['class'] == \"columns-2 gap-8 prose\"\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        header,\n",
+    "        sidebar,\n",
+    "        modal_overlay,\n",
+    "        image_container,\n",
+    "        article,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
     "\n",
     "# Run the tests\n",
-    "test_layout_practical_examples()"
+    "test_layout_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1c72c8f-20bc-45da-b8c8-e1c605126001",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_layout_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
@@ -1271,13 +1372,41 @@
    "execution_count": null,
    "id": "5z4op041h4v",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "  <nav>\n",
+       "<button class=\"md:hidden\">Menu</button>    <div class=\"md:none md:fixed w-full md:w-auto\">Navigation items</div>\n",
+       "  </nav>\n",
+       "  <div class=\"group relative\">\n",
+       "<button class=\"relative\">Options</button>    <div class=\"group-hover:none absolute mt-2 bg-white shadow-lg\">Dropdown content</div>\n",
+       "  </div>\n",
+       "  <div class=\"focus:sr-only focus:absolute top-4 left-4 bg-white p-2 z-50\">Skip to content</div>\n",
+       "  <div class=\"overflow-x-auto md:overflow-y-hidden border rounded\">Table content</div>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((nav((button(('Menu',),{'class': 'md:hidden'}), div(('Navigation items',),{'class': 'md:none md:fixed w-full md:w-auto'})),{}), div((button(('Options',),{'class': 'relative'}), div(('Dropdown content',),{'class': 'group-hover:none absolute mt-2 bg-white shadow-lg'})),{'class': 'group relative'}), div(('Skip to content',),{'class': 'focus:sr-only focus:absolute top-4 left-4 bg-white p-2 z-50'}), div(('Table content',),{'class': 'overflow-x-auto md:overflow-y-hidden border rounded'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_layout_enhanced_factories_examples(\n",
+    "#|exports\n",
+    "def test_layout_enhanced_factories_fasthtml_examples(\n",
     "):\n",
     "    \"\"\"Test enhanced factories with modifier support in practical examples.\"\"\"\n",
     "    from fasthtml.common import Div, Nav, Button, Span\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Mobile navigation with responsive display\n",
     "    mobile_nav = Nav(\n",
@@ -1333,8 +1462,74 @@
     "    assert \"overflow-x-auto\" in table_container.attrs['class']\n",
     "    assert \"md:overflow-y-hidden\" in table_container.attrs['class']\n",
     "\n",
+    "    return Div(\n",
+    "        mobile_nav,\n",
+    "        dropdown,\n",
+    "        skip_link,\n",
+    "        table_container,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
+    "\n",
     "# Run the tests\n",
-    "test_layout_enhanced_factories_examples()"
+    "test_layout_enhanced_factories_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0f289b0-3113-4575-980f-8736febc2bdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_layout_enhanced_factories_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
@@ -1344,7 +1539,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_modifier_examples(\n",
     "):\n",
     "    \"\"\"Test layout utilities with modifiers for conditional styling.\"\"\"\n",
@@ -1530,7 +1725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_layout_helper_examples(\n",
     "):\n",
     "    \"\"\"Test helper functions for common layout patterns.\"\"\"\n",
