--- a/nbs/utilities/sizing.ipynb
+++ b/nbs/utilities/sizing.ipynb
@@ -43,7 +43,12 @@
     "from cjm_fasthtml_tailwind.core.base import TailwindScale, combine_classes, SingleValueFactory\n",
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    ScaledFactory, SIZE_CONFIG, ScaleConfig\n",
-    ")"
+    ")\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -84,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_width_examples(\n",
     "):\n",
     "    \"\"\"Test width utilities with various scales and values.\"\"\"\n",
@@ -128,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_width_named_examples(\n",
     "):\n",
     "    \"\"\"Test width utilities with named container sizes.\"\"\"\n",
@@ -164,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_width_viewport_examples(\n",
     "):\n",
     "    \"\"\"Test width utilities with viewport units.\"\"\"\n",
@@ -199,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_arbitrary_examples(\n",
     "):\n",
     "    \"\"\"Test sizing utilities with arbitrary and custom values.\"\"\"\n",
@@ -255,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_height_examples(\n",
     "):\n",
     "    \"\"\"Test height utilities with various scales and values.\"\"\"\n",
@@ -295,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_height_viewport_examples(\n",
     "):\n",
     "    \"\"\"Test height utilities with viewport units.\"\"\"\n",
@@ -344,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_min_width_examples(\n",
     "):\n",
     "    \"\"\"Test min-width utilities.\"\"\"\n",
@@ -398,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_max_width_examples(\n",
     "):\n",
     "    \"\"\"Test max-width utilities.\"\"\"\n",
@@ -449,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_container_examples(\n",
     "):\n",
     "    \"\"\"Test continer utility.\"\"\"\n",
@@ -494,7 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_min_height_examples(\n",
     "):\n",
     "    \"\"\"Test min-height utilities.\"\"\"\n",
@@ -565,7 +570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_size_util_examples(\n",
     "):\n",
     "    \"\"\"Test size utilities that set both width and height.\"\"\"\n",
@@ -598,7 +603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_max_height_examples(\n",
     "):\n",
     "    \"\"\"Test max-height utilities.\"\"\"\n",
@@ -638,16 +643,49 @@
    "execution_count": null,
    "id": "a0tt6ly9ehg",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "  <div class=\"w-full max-w-md h-auto\">Card content</div>\n",
+       "  <div class=\"w-full h-screen min-h-screen\">Hero content</div>\n",
+       "  <div class=\"w-1/2 h-64 max-h-96\">\n",
+       "<img src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\" class=\"w-full h-full object-cover\">  </div>\n",
+       "  <div class=\"flex\">\n",
+       "    <aside class=\"w-64 min-w-48 h-full\">Sidebar</aside>\n",
+       "<main class=\"w-full min-h-screen\">Main content</main>  </div>\n",
+       "  <article class=\"w-full max-w-4xl mx-auto min-h-[50vh]\">\n",
+       "    <header>Article Title</header>\n",
+       "    <div>Article content...</div>\n",
+       "  </article>\n",
+       "  <div class=\"size-16 relative\">\n",
+       "<img src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\" class=\"rounded-full\">  </div>\n",
+       "  <div class=\"container mx-auto px-4\">Page content</div>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((div(('Card content',),{'class': 'w-full max-w-md h-auto'}), div(('Hero content',),{'class': 'w-full h-screen min-h-screen'}), div((img((),{'src': 'https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp', 'class': 'w-full h-full object-cover'}),),{'class': 'w-1/2 h-64 max-h-96'}), div((aside(('Sidebar',),{'class': 'w-64 min-w-48 h-full'}), main(('Main content',),{'class': 'w-full min-h-screen'})),{'class': 'flex'}), article((header(('Article Title',),{}), div(('Article content...',),{})),{'class': 'w-full max-w-4xl mx-auto min-h-[50vh]'}), div((img((),{'src': 'https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp', 'class': 'rounded-full'}),),{'class': 'size-16 relative'}), div(('Page content',),{'class': 'container mx-auto px-4'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_sizing_practical_examples(\n",
+    "#|exports\n",
+    "def test_sizing_fasthtml_examples(\n",
     "):\n",
     "    \"\"\"Test sizing utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Img, Article, Header, Main, Aside\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, position, object_fit\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import m, p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Card with constrained width\n",
     "    card = Div(\n",
@@ -665,7 +703,7 @@
     "    \n",
     "    # Responsive image container\n",
     "    image_container = Div(\n",
-    "        Img(src=\"image.jpg\", cls=combine_classes(w.full, h.full, object_fit.cover)),\n",
+    "        Img(src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\", cls=combine_classes(w.full, h.full, object_fit.cover)),\n",
     "        cls=combine_classes(w(\"1/2\"), h(64), max_h(96))\n",
     "    )\n",
     "    assert image_container.attrs['class'] == \"w-1/2 h-64 max-h-96\"\n",
@@ -690,7 +728,7 @@
     "    \n",
     "    # Using the size utility for square elements\n",
     "    avatar = Div(\n",
-    "        Img(src=\"avatar.jpg\", cls=str(rounded.full)),\n",
+    "        Img(src=\"https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp\", cls=str(rounded.full)),\n",
     "        cls=combine_classes(size_util(16), position.relative)\n",
     "    )\n",
     "    assert avatar.attrs['class'] == \"size-16 relative\"\n",
@@ -701,9 +739,79 @@
     "        cls=combine_classes(container, m.x.auto, p.x(4))\n",
     "    )\n",
     "    assert page_container.attrs['class'] == \"container mx-auto px-4\"\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        card,\n",
+    "        hero,\n",
+    "        image_container,\n",
+    "        layout,\n",
+    "        article,\n",
+    "        avatar,\n",
+    "        page_container,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
     "\n",
     "# Run the tests\n",
-    "test_sizing_practical_examples()"
+    "test_sizing_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86a4e8d9-ba54-4319-8bc3-cc9b05775e08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_sizing_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
@@ -826,7 +934,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_sizing_helper_examples(\n",
     "):\n",
     "    \"\"\"Test helper functions for common sizing patterns.\"\"\"\n",
