--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -43,7 +43,12 @@
     "from cjm_fasthtml_tailwind.core.base import TailwindScale, combine_classes\n",
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    DirectionalScaledFactory, ScaledFactory, SPACING_CONFIG\n",
-    ")"
+    ")\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -88,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_basic_examples(\n",
     "):\n",
     "    \"\"\"Test basic padding utilities with various scale values.\"\"\"\n",
@@ -123,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_directional_examples(\n",
     "):\n",
     "    \"\"\"Test directional padding utilities.\"\"\"\n",
@@ -158,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_arbitrary_examples(\n",
     "):\n",
     "    \"\"\"Test padding utilities with arbitrary and custom values.\"\"\"\n",
@@ -217,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_margin_examples(\n",
     "):\n",
     "    \"\"\"Test basic margin utilities with various scale values.\"\"\"\n",
@@ -252,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_margin_directional_examples(\n",
     "):\n",
     "    \"\"\"Test directional margin utilities.\"\"\"\n",
@@ -290,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_negative_examples(\n",
     "):\n",
     "    \"\"\"Test negative margin utilities.\"\"\"\n",
@@ -318,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_logical_examples(\n",
     "):\n",
     "    \"\"\"Test logical properties for padding and margin utilities.\"\"\"\n",
@@ -400,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_space_between_examples(\n",
     "):\n",
     "    \"\"\"Test space between child elements utilities.\"\"\"\n",
@@ -441,14 +446,43 @@
    "execution_count": null,
    "id": "aca0dc9e-890e-401f-805e-81504c50d928",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "  <div class=\"p-6 m-4\">\n",
+       "    <h2 class=\"pb-2\">Card Title</h2>\n",
+       "    <p class=\"pb-4\">Card content goes here.</p>\n",
+       "<button class=\"px-4 py-2\">Action</button>  </div>\n",
+       "  <div class=\"m-4\">\n",
+       "    <div class=\"p-4 -mb-8\">Header</div>\n",
+       "    <div class=\"p-8\">Content</div>\n",
+       "  </div>\n",
+       "  <div class=\"mx-auto p-8 max-w-4xl\">Centered content</div>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((div((h2(('Card Title',),{'class': 'pb-2'}), p(('Card content goes here.',),{'class': 'pb-4'}), button(('Action',),{'class': 'px-4 py-2'})),{'class': 'p-6 m-4'}), div((div(('Header',),{'class': 'p-4 -mb-8'}), div(('Content',),{'class': 'p-8'})),{'class': <cjm_fasthtml_tailwind.builders.scales.ScaledUtility object>}), div(('Centered content',),{'class': 'mx-auto p-8 max-w-4xl'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_spacing_practical_examples(\n",
+    "#|exports\n",
+    "def test_spacing_fasthtml_examples(\n",
     "):\n",
     "    \"\"\"Test spacing utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, P, Button, H2\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import max_w\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Card component with padding\n",
     "    card = Div(\n",
@@ -479,9 +513,75 @@
     "    )\n",
     "    \n",
     "    assert centered_container.attrs['class'] == \"mx-auto p-8 max-w-4xl\"\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        card,\n",
+    "        overlap_layout,\n",
+    "        centered_container,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
     "\n",
     "# Run the tests\n",
-    "test_spacing_practical_examples()"
+    "test_spacing_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54b4a342-7075-4572-b1ca-0298c3bea518",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_spacing_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
@@ -584,7 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_helper_examples(\n",
     "):\n",
     "    \"\"\"Test helper functions for common spacing patterns.\"\"\"\n",
@@ -619,7 +719,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_modifier_examples(\n",
     "):\n",
     "    \"\"\"Test spacing utilities with modifiers for conditional styling.\"\"\"\n",
@@ -659,7 +759,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_spacing_enhanced_factory_examples(\n",
     "):\n",
     "    \"\"\"Test enhanced SingleValueFactory support in spacing utilities.\"\"\"\n",
