--- a/nbs/utilities/tables.ipynb
+++ b/nbs/utilities/tables.ipynb
@@ -46,7 +46,12 @@
     ")\n",
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    SimpleFactory, DirectionalScaledFactory, ScaledFactory, SPACING_CONFIG\n",
-    ")"
+    ")\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -83,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_tables_border_collapse_examples():\n",
     "    \"\"\"Test border collapse utilities.\"\"\"\n",
     "    assert str(border_collapse.collapse) == \"border-collapse\"\n",
@@ -178,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_tables_border_spacing_basic_examples():\n",
     "    \"\"\"Test basic border spacing utilities.\"\"\"\n",
     "    # Numeric scales\n",
@@ -211,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_tables_border_spacing_directional_examples():\n",
     "    \"\"\"Test directional border spacing utilities.\"\"\"\n",
     "    # Horizontal spacing\n",
@@ -245,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_tables_border_spacing_arbitrary_examples():\n",
     "    \"\"\"Test border spacing utilities with arbitrary values.\"\"\"\n",
     "    # Arbitrary values\n",
@@ -296,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_tables_layout_examples():\n",
     "    \"\"\"Test table layout utilities.\"\"\"\n",
     "    assert str(table_layout.auto) == \"table-auto\"\n",
@@ -340,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_tables_caption_side_examples():\n",
     "    \"\"\"Test caption side utilities.\"\"\"\n",
     "    assert str(caption_side.top) == \"caption-top\"\n",
@@ -413,13 +418,117 @@
    "execution_count": null,
    "id": "2f018436-e88f-4c77-8845-cb97ea6e2225",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "  <table class=\"border-collapse w-full\">\n",
+       "    <thead>\n",
+       "      <tr>\n",
+       "        <th>Name</th>\n",
+       "        <th>Email</th>\n",
+       "        <th>Role</th>\n",
+       "      </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "      <tr>\n",
+       "        <td>John Doe</td>\n",
+       "        <td>john@example.com</td>\n",
+       "        <td>Admin</td>\n",
+       "      </tr>\n",
+       "      <tr>\n",
+       "        <td>Jane Smith</td>\n",
+       "        <td>jane@example.com</td>\n",
+       "        <td>User</td>\n",
+       "      </tr>\n",
+       "    </tbody>\n",
+       "  </table>\n",
+       "  <table class=\"border-separate border-spacing-2 w-full\">\n",
+       "    <tbody>\n",
+       "      <tr>\n",
+       "        <td>Cell 1</td>\n",
+       "        <td>Cell 2</td>\n",
+       "      </tr>\n",
+       "      <tr>\n",
+       "        <td>Cell 3</td>\n",
+       "        <td>Cell 4</td>\n",
+       "      </tr>\n",
+       "    </tbody>\n",
+       "  </table>\n",
+       "  <table class=\"border-separate border-spacing-x-4 border-spacing-y-2 w-full\">\n",
+       "    <tbody>\n",
+       "      <tr>\n",
+       "        <td>A</td>\n",
+       "        <td>B</td>\n",
+       "        <td>C</td>\n",
+       "      </tr>\n",
+       "      <tr>\n",
+       "        <td>D</td>\n",
+       "        <td>E</td>\n",
+       "        <td>F</td>\n",
+       "      </tr>\n",
+       "    </tbody>\n",
+       "  </table>\n",
+       "  <table class=\"table-fixed border-collapse w-full\">\n",
+       "<caption class=\"caption-top\">User Information</caption>    <thead>\n",
+       "      <tr>\n",
+       "        <th class=\"w-20\">ID</th>\n",
+       "        <th class=\"w-40\">Name</th>\n",
+       "        <th>Description</th>\n",
+       "      </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "      <tr>\n",
+       "        <td>001</td>\n",
+       "        <td>Product A</td>\n",
+       "        <td>A detailed description of Product A that might be quite long</td>\n",
+       "      </tr>\n",
+       "    </tbody>\n",
+       "  </table>\n",
+       "  <table class=\"table-auto border-separate border-spacing-px min-w-full\">\n",
+       "<caption class=\"caption-bottom\">Sales Data</caption>    <thead>\n",
+       "      <tr>\n",
+       "        <th>Month</th>\n",
+       "        <th>Revenue</th>\n",
+       "        <th>Growth</th>\n",
+       "      </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "      <tr>\n",
+       "        <td>January</td>\n",
+       "        <td>$10,000</td>\n",
+       "        <td>+5%</td>\n",
+       "      </tr>\n",
+       "      <tr>\n",
+       "        <td>February</td>\n",
+       "        <td>$12,000</td>\n",
+       "        <td>+20%</td>\n",
+       "      </tr>\n",
+       "    </tbody>\n",
+       "  </table>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((table((thead((tr((th(('Name',),{}), th(('Email',),{}), th(('Role',),{})),{}),),{}), tbody((tr((td(('John Doe',),{}), td(('john@example.com',),{}), td(('Admin',),{})),{}), tr((td(('Jane Smith',),{}), td(('jane@example.com',),{}), td(('User',),{})),{})),{})),{'class': 'border-collapse w-full'}), table((tbody((tr((td(('Cell 1',),{}), td(('Cell 2',),{})),{}), tr((td(('Cell 3',),{}), td(('Cell 4',),{})),{})),{}),),{'class': 'border-separate border-spacing-2 w-full'}), table((tbody((tr((td(('A',),{}), td(('B',),{}), td(('C',),{})),{}), tr((td(('D',),{}), td(('E',),{}), td(('F',),{})),{})),{}),),{'class': 'border-separate border-spacing-x-4 border-spacing-y-2 w-full'}), table((caption(('User Information',),{'class': 'caption-top'}), thead((tr((th(('ID',),{'class': 'w-20'}), th(('Name',),{'class': 'w-40'}), th(('Description',),{})),{}),),{}), tbody((tr((td(('001',),{}), td(('Product A',),{}), td(('A detailed description of Product A that might be quite long',),{})),{}),),{})),{'class': 'table-fixed border-collapse w-full'}), table((caption(('Sales Data',),{'class': 'caption-bottom'}), thead((tr((th(('Month',),{}), th(('Revenue',),{}), th(('Growth',),{})),{}),),{}), tbody((tr((td(('January',),{}), td(('$10,000',),{}), td(('+5%',),{})),{}), tr((td(('February',),{}), td(('$12,000',),{}), td(('+20%',),{})),{})),{})),{'class': 'table-auto border-separate border-spacing-px min-w-full'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_tables_practical_examples():\n",
+    "#|exports\n",
+    "def test_tables_fasthtml_examples():\n",
     "    \"\"\"Test table utilities in practical FastHTML component examples.\"\"\"\n",
-    "    from fasthtml.common import Table, Thead, Tbody, Tr, Th, Td, Caption\n",
+    "    from fasthtml.common import Table, Thead, Tbody, Tr, Th, Td, Caption, Div\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, min_w\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Basic table with collapsed borders\n",
     "    basic_table = Table(\n",
@@ -526,9 +635,77 @@
     "    assert \"table-auto\" in auto_table.attrs['class']\n",
     "    assert \"caption-bottom\" in auto_table.children[0].attrs['class']\n",
     "    assert \"border-spacing-px\" in auto_table.attrs['class']\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        basic_table,\n",
+    "        spaced_table,\n",
+    "        custom_spaced_table,\n",
+    "        fixed_table,\n",
+    "        auto_table,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
     "\n",
     "# Run the tests\n",
-    "test_tables_practical_examples()"
+    "test_tables_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5a724d7-831c-4929-9f97-14bab222189e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_tables_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
@@ -554,10 +731,85 @@
    "execution_count": null,
    "id": "7f8222e0-3f0c-4eae-84a3-d2e9a16d7460",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "  <div class=\"p-6\">\n",
+       "    <table class=\"table-fixed border-separate border-spacing-0 w-full bg-white shadow-sm rounded-lg overflow-hidden\">\n",
+       "<caption class=\"caption-top text-lg font-semibold text-gray-700 mb-2\">Quarterly Sales Report</caption>      <thead>\n",
+       "        <tr class=\"border-b-2 border-gray-300\">\n",
+       "          <th class=\"text-left p-4 bg-gray-100\">Quarter</th>\n",
+       "          <th class=\"text-left p-4 bg-gray-100\">Product</th>\n",
+       "          <th class=\"text-right p-4 bg-gray-100\">Units Sold</th>\n",
+       "          <th class=\"text-right p-4 bg-gray-100\">Revenue</th>\n",
+       "        </tr>\n",
+       "      </thead>\n",
+       "      <tbody>\n",
+       "        <tr class=\"border-b border-gray-200\">\n",
+       "          <td class=\"p-4\">Q1 2024</td>\n",
+       "          <td class=\"p-4\">Widget A</td>\n",
+       "          <td class=\"text-right p-4\">1,234</td>\n",
+       "          <td class=\"text-right p-4\">$12,340</td>\n",
+       "        </tr>\n",
+       "        <tr class=\"border-b border-gray-200\">\n",
+       "          <td class=\"p-4\">Q1 2024</td>\n",
+       "          <td class=\"p-4\">Widget B</td>\n",
+       "          <td class=\"text-right p-4\">567</td>\n",
+       "          <td class=\"text-right p-4\">$8,505</td>\n",
+       "        </tr>\n",
+       "        <tr class=\"border-b border-gray-200\">\n",
+       "          <td class=\"p-4\">Q2 2024</td>\n",
+       "          <td class=\"p-4\">Widget A</td>\n",
+       "          <td class=\"text-right p-4\">1,567</td>\n",
+       "          <td class=\"text-right p-4\">$15,670</td>\n",
+       "        </tr>\n",
+       "        <tr class=\"border-b border-gray-200\">\n",
+       "          <td class=\"p-4\">Q2 2024</td>\n",
+       "          <td class=\"p-4\">Widget B</td>\n",
+       "          <td class=\"text-right p-4\">890</td>\n",
+       "          <td class=\"text-right p-4\">$13,350</td>\n",
+       "        </tr>\n",
+       "      </tbody>\n",
+       "    </table>\n",
+       "  </div>\n",
+       "  <table class=\"border-separate border-spacing-x-1 border-spacing-y-0.5 table-auto text-sm\">\n",
+       "    <tbody>\n",
+       "      <tr>\n",
+       "        <td>Item 1</td>\n",
+       "        <td>$10</td>\n",
+       "        <td>✓</td>\n",
+       "      </tr>\n",
+       "      <tr>\n",
+       "        <td>Item 2</td>\n",
+       "        <td>$20</td>\n",
+       "        <td>✓</td>\n",
+       "      </tr>\n",
+       "      <tr>\n",
+       "        <td>Item 3</td>\n",
+       "        <td>$15</td>\n",
+       "        <td>✗</td>\n",
+       "      </tr>\n",
+       "    </tbody>\n",
+       "  </table>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((div((table((caption(('Quarterly Sales Report',),{'class': 'caption-top text-lg font-semibold text-gray-700 mb-2'}), thead((tr((th(('Quarter',),{'class': 'text-left p-4 bg-gray-100'}), th(('Product',),{'class': 'text-left p-4 bg-gray-100'}), th(('Units Sold',),{'class': 'text-right p-4 bg-gray-100'}), th(('Revenue',),{'class': 'text-right p-4 bg-gray-100'})),{'class': 'border-b-2 border-gray-300'}),),{}), tbody((tr((td(('Q1 2024',),{'class': 'p-4'}), td(('Widget A',),{'class': 'p-4'}), td(('1,234',),{'class': 'text-right p-4'}), td(('$12,340',),{'class': 'text-right p-4'})),{'class': 'border-b border-gray-200'}), tr((td(('Q1 2024',),{'class': 'p-4'}), td(('Widget B',),{'class': 'p-4'}), td(('567',),{'class': 'text-right p-4'}), td(('$8,505',),{'class': 'text-right p-4'})),{'class': 'border-b border-gray-200'}), tr((td(('Q2 2024',),{'class': 'p-4'}), td(('Widget A',),{'class': 'p-4'}), td(('1,567',),{'class': 'text-right p-4'}), td(('$15,670',),{'class': 'text-right p-4'})),{'class': 'border-b border-gray-200'}), tr((td(('Q2 2024',),{'class': 'p-4'}), td(('Widget B',),{'class': 'p-4'}), td(('890',),{'class': 'text-right p-4'}), td(('$13,350',),{'class': 'text-right p-4'})),{'class': 'border-b border-gray-200'})),{})),{'class': 'table-fixed border-separate border-spacing-0 w-full bg-white shadow-sm rounded-lg overflow-hidden'}),),{'class': 'p-6'}), table((tbody((tr((td(('Item 1',),{}), td(('$10',),{}), td(('✓',),{})),{}), tr((td(('Item 2',),{}), td(('$20',),{}), td(('✓',),{})),{}), tr((td(('Item 3',),{}), td(('$15',),{}), td(('✗',),{})),{})),{}),),{'class': 'border-separate border-spacing-x-1 border-spacing-y-0.5 table-auto text-sm'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_tables_complex_example():\n",
+    "#|exports\n",
+    "def test_tables_complex_fasthtml_examples():\n",
     "    \"\"\"Test a complex table example with various styling.\"\"\"\n",
     "    from fasthtml.common import Table, Thead, Tbody, Tr, Th, Td, Caption, Div\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w\n",
@@ -565,8 +817,9 @@
     "    from cjm_fasthtml_tailwind.utilities.borders import border, border_color, rounded\n",
     "    from cjm_fasthtml_tailwind.utilities.typography import text, text_align, font\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p, m\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import overflow\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import overflow, display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.effects import shadow\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Create a styled data table\n",
     "    data_table = Div(\n",
@@ -661,9 +914,74 @@
     "    assert \"border-spacing-x-1\" in compact_table.attrs['class']\n",
     "    assert \"border-spacing-y-0.5\" in compact_table.attrs['class']\n",
     "    assert \"table-auto\" in compact_table.attrs['class']\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        data_table,\n",
+    "        compact_table,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
     "\n",
     "# Run the test\n",
-    "test_tables_complex_example()"
+    "test_tables_complex_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "135efc0a-dbfc-46be-929a-1d59ee0d048c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_tables_complex_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
