--- a/nbs/utilities/transforms.ipynb
+++ b/nbs/utilities/transforms.ipynb
@@ -50,7 +50,12 @@
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    ScaledFactory, DirectionalScaledFactory, ScaleConfig, INSET_CONFIG, SimpleFactory,\n",
     "    ScaledUtility, NegativeFactory, SPACING_CONFIG, FRACTIONS\n",
-    ")"
+    ")\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -87,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_backface_examples():\n",
     "    \"\"\"Test backface visibility utilities.\"\"\"\n",
     "    assert str(backface.hidden) == \"backface-hidden\"\n",
@@ -174,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_perspective_examples():\n",
     "    \"\"\"Test perspective utilities.\"\"\"\n",
     "    # Named perspectives\n",
@@ -270,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_perspective_origin_examples():\n",
     "    \"\"\"Test perspective origin utilities.\"\"\"\n",
     "    # Fixed positions\n",
@@ -424,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_rotate_examples():\n",
     "    \"\"\"Test rotate utilities.\"\"\"\n",
     "    # Basic rotations\n",
@@ -643,7 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_scale_examples():\n",
     "    \"\"\"Test scale utilities.\"\"\"\n",
     "    # Basic scaling\n",
@@ -830,7 +835,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_skew_examples():\n",
     "    \"\"\"Test skew utilities.\"\"\"\n",
     "    # Basic skewing\n",
@@ -928,7 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_transform_examples():\n",
     "    \"\"\"Test transform utilities.\"\"\"\n",
     "    # Special values\n",
@@ -1020,7 +1025,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_origin_examples():\n",
     "    \"\"\"Test transform origin utilities.\"\"\"\n",
     "    # Fixed positions\n",
@@ -1072,7 +1077,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_style_examples():\n",
     "    \"\"\"Test transform style utilities.\"\"\"\n",
     "    assert str(transform_style._3d) == \"transform-3d\"\n",
@@ -1174,7 +1179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_translate_examples():\n",
     "    \"\"\"Test translate utilities.\"\"\"\n",
     "    # Basic translations\n",
@@ -1229,16 +1234,55 @@
    "execution_count": null,
    "id": "dbc2134a-fa13-430a-8d7e-f706683ff4b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "<button class=\"hover:scale-110 hover:rotate-3 transition-transform\">Hover Me</button>  <div class=\"perspective-normal\">\n",
+       "    <div class=\"transform-3d transition-transform duration-700 hover:rotate-y-180\">\n",
+       "      <div class=\"backface-hidden\">Front</div>\n",
+       "      <div class=\"backface-hidden rotate-y-180\">Back</div>\n",
+       "    </div>\n",
+       "  </div>\n",
+       "  <div>\n",
+       "    <div class=\"fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2\">Modal Content</div>\n",
+       "  </div>\n",
+       "  <div class=\"-skew-y-3 origin-left h-24 bg-gray-100\"></div>\n",
+       "  <div class=\"scale-110 translate-y-[calc(var(--scroll-y) * -0.5)] transform-gpu\">\n",
+       "<img src=\"bg.jpg\">  </div>\n",
+       "  <div class=\"transform-3d animate-spin-3d\">\n",
+       "    <div class=\"absolute w-full h-full\">Front</div>\n",
+       "    <div class=\"absolute w-full h-full backface-hidden\">Back</div>\n",
+       "    <div class=\"absolute w-full h-full backface-hidden\">Top</div>\n",
+       "    <div class=\"absolute w-full h-full backface-hidden\">Bottom</div>\n",
+       "    <div class=\"absolute w-full h-full backface-hidden\">Left</div>\n",
+       "    <div class=\"absolute w-full h-full backface-hidden\">Right</div>\n",
+       "  </div>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((button(('Hover Me',),{'class': 'hover:scale-110 hover:rotate-3 transition-transform'}), div((div((div(('Front',),{'class': 'backface-hidden'}), div(('Back',),{'class': 'backface-hidden rotate-y-180'})),{'class': 'transform-3d transition-transform duration-700 hover:rotate-y-180'}),),{'class': 'perspective-normal'}), div((div(('Modal Content',),{'class': 'fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2'}),),{}), div((),{'class': '-skew-y-3 origin-left h-24 bg-gray-100'}), div((img((),{'src': 'bg.jpg'}),),{'class': 'scale-110 translate-y-[calc(var(--scroll-y) * -0.5)] transform-gpu'}), div((div(('Front',),{'class': 'absolute w-full h-full'}), div(('Back',),{'class': 'absolute w-full h-full backface-hidden'}), div(('Top',),{'class': 'absolute w-full h-full backface-hidden'}), div(('Bottom',),{'class': 'absolute w-full h-full backface-hidden'}), div(('Left',),{'class': 'absolute w-full h-full backface-hidden'}), div(('Right',),{'class': 'absolute w-full h-full backface-hidden'})),{'class': 'transform-3d animate-spin-3d'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_transforms_practical_examples():\n",
+    "#|exports\n",
+    "def test_transforms_fasthtml_examples():\n",
     "    \"\"\"Test transform utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Button, Card, Img, A\n",
     "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition, duration, animate\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import position, top, left\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position, top, left, display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import h, w\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Hover effect with scale and rotate\n",
     "    hover_button = Button(\n",
@@ -1318,9 +1362,78 @@
     "            animate(\"spin-3d\")\n",
     "        )\n",
     "    )\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        hover_button,\n",
+    "        flip_card,\n",
+    "        modal,\n",
+    "        skewed_divider,\n",
+    "        parallax_element,\n",
+    "        cube,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
     "\n",
     "# Run the test\n",
-    "test_transforms_practical_examples()"
+    "test_transforms_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fbf92b0-a197-4f45-8e9e-f201e72b8ca2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_transforms_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
@@ -1407,7 +1520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_transforms_helper_examples():\n",
     "    \"\"\"Test helper functions for common transform patterns.\"\"\"\n",
     "    # Test center transform\n",
