--- a/nbs/utilities/typography.ipynb
+++ b/nbs/utilities/typography.ipynb
@@ -47,7 +47,12 @@
     "from cjm_fasthtml_tailwind.builders.colors import ColoredFactory, ColorValue\n",
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    SimpleFactory, ScaledFactory, ScaleConfig, DirectionalScaledFactory, SPACING_CONFIG, NUMERIC_SCALE\n",
-    ")"
+    ")\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -68,7 +73,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "font = SimpleFactory(\n",
+    "font_family = SimpleFactory(\n",
     "    {\n",
     "        \"sans\": \"font-sans\",\n",
     "        \"serif\": \"font-serif\",\n",
@@ -85,93 +90,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_font_family_examples():\n",
     "    \"\"\"Test font family utilities.\"\"\"\n",
-    "    assert str(font.sans) == \"font-sans\"\n",
-    "    assert str(font.serif) == \"font-serif\"\n",
-    "    assert str(font.mono) == \"font-mono\"\n",
+    "    assert str(font_family.sans) == \"font-sans\"\n",
+    "    assert str(font_family.serif) == \"font-serif\"\n",
+    "    assert str(font_family.mono) == \"font-mono\"\n",
     "\n",
     "# Run the tests\n",
     "test_typography_font_family_examples()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dda0ad64-c9f0-4787-ae89-dd43818bf73d",
-   "metadata": {},
-   "source": [
-    "## Font Size\n",
-    "\n",
-    "Utilities for controlling the font size of an element. These utilities also set default line heights:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a25c933e-9fab-4443-a6e5-4336d6f6298a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "# Font size with line height config\n",
-    "TEXT_SIZE_CONFIG = ScaleConfig(\n",
-    "    numeric=False,\n",
-    "    decimals=False,\n",
-    "    fractions=False,\n",
-    "    named=[\n",
-    "        NamedScale(\"xs\", \"--text-xs\", \"0.75rem (12px)\"),\n",
-    "        NamedScale(\"sm\", \"--text-sm\", \"0.875rem (14px)\"),\n",
-    "        NamedScale(\"base\", \"--text-base\", \"1rem (16px)\"),\n",
-    "        NamedScale(\"lg\", \"--text-lg\", \"1.125rem (18px)\"),\n",
-    "        NamedScale(\"xl\", \"--text-xl\", \"1.25rem (20px)\"),\n",
-    "        NamedScale(\"2xl\", \"--text-2xl\", \"1.5rem (24px)\"),\n",
-    "        NamedScale(\"3xl\", \"--text-3xl\", \"1.875rem (30px)\"),\n",
-    "        NamedScale(\"4xl\", \"--text-4xl\", \"2.25rem (36px)\"),\n",
-    "        NamedScale(\"5xl\", \"--text-5xl\", \"3rem (48px)\"),\n",
-    "        NamedScale(\"6xl\", \"--text-6xl\", \"3.75rem (60px)\"),\n",
-    "        NamedScale(\"7xl\", \"--text-7xl\", \"4.5rem (72px)\"),\n",
-    "        NamedScale(\"8xl\", \"--text-8xl\", \"6rem (96px)\"),\n",
-    "        NamedScale(\"9xl\", \"--text-9xl\", \"8rem (128px)\")\n",
-    "    ],\n",
-    "    special={},\n",
-    "    negative=False\n",
-    ")\n",
-    "\n",
-    "text = ScaledFactory(\"text\", TEXT_SIZE_CONFIG, \"Font size utilities that also set default line heights\") # Font size factory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "202708dd-e517-4251-8321-19103607c6a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_typography_font_size_examples():\n",
-    "    \"\"\"Test font size utilities.\"\"\"\n",
-    "    assert str(text.xs) == \"text-xs\"\n",
-    "    assert str(text.sm) == \"text-sm\"\n",
-    "    assert str(text.base) == \"text-base\"\n",
-    "    assert str(text.lg) == \"text-lg\"\n",
-    "    assert str(text.xl) == \"text-xl\"\n",
-    "    assert str(text._2xl) == \"text-2xl\"\n",
-    "    assert str(text._3xl) == \"text-3xl\"\n",
-    "    assert str(text._4xl) == \"text-4xl\"\n",
-    "    assert str(text._5xl) == \"text-5xl\"\n",
-    "    assert str(text._6xl) == \"text-6xl\"\n",
-    "    assert str(text._7xl) == \"text-7xl\"\n",
-    "    assert str(text._8xl) == \"text-8xl\"\n",
-    "    assert str(text._9xl) == \"text-9xl\"\n",
-    "    \n",
-    "    # Arbitrary values\n",
-    "    assert str(text(\"10px\")) == \"text-[10px]\"\n",
-    "    assert str(text(\"1.5rem\")) == \"text-[1.5rem]\"\n",
-    "    assert str(text(\"--custom-size\")) == \"text-(--custom-size)\"\n",
-    "\n",
-    "# Run the tests\n",
-    "test_typography_font_size_examples()"
    ]
   },
   {
@@ -203,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_font_smoothing_examples():\n",
     "    \"\"\"Test font smoothing utilities.\"\"\"\n",
     "    assert str(antialiased) == \"antialiased\"\n",
@@ -242,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_font_style_examples():\n",
     "    \"\"\"Test font style utilities.\"\"\"\n",
     "    assert str(italic) == \"italic\"\n",
@@ -345,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_font_weight_examples():\n",
     "    \"\"\"Test font weight utilities.\"\"\"\n",
     "    # Named weights\n",
@@ -417,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_font_stretch_examples():\n",
     "    \"\"\"Test font stretch utilities.\"\"\"\n",
     "    assert str(font_stretch.ultra_condensed) == \"font-stretch-ultra-condensed\"\n",
@@ -487,7 +414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_font_variant_numeric_examples():\n",
     "    \"\"\"Test font variant numeric utilities.\"\"\"\n",
     "    assert str(normal_nums) == \"normal-nums\"\n",
@@ -565,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_spacing_examples():\n",
     "    \"\"\"Test letter spacing utilities.\"\"\"\n",
     "    # Letter spacing\n",
@@ -638,7 +565,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_line_clamp_examples():\n",
     "    \"\"\"Test line clamp utilities.\"\"\"\n",
     "        \n",
@@ -720,7 +647,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_line_height_examples():\n",
     "    \"\"\"Test line height utilities.\"\"\"\n",
     "    # Line height\n",
@@ -833,7 +760,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_list_image_examples():\n",
     "    \"\"\"Test list style image utilities.\"\"\"\n",
     "    assert str(list_image.none) == \"list-image-none\"\n",
@@ -888,7 +815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_list_styles_examples():\n",
     "    \"\"\"Test list styles utilities.\"\"\"\n",
     "    \n",
@@ -941,7 +868,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_text_alignment_examples():\n",
     "    \"\"\"Test text alignment utilities.\"\"\"\n",
     "    # Text alignment\n",
@@ -958,12 +885,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ec6fb60-5779-44b3-a0d3-220d7639d96d",
+   "id": "1fa38006-f2cc-4ec1-a06a-80c942ab5a3e",
    "metadata": {},
    "source": [
-    "## Text Color\n",
+    "## Font Size & Text Color\n",
     "\n",
-    "Utilities for controlling the text color of an element:"
+    "Utilities for controlling the font size and text color of an element. These utilities also set default line heights.:"
    ]
   },
   {
@@ -1017,7 +944,7 @@
     "    ) -> Any:  # Utility instance or color proxy\n",
     "        \"\"\"Handle attribute access for both sizes and colors.\"\"\"\n",
     "        \n",
-    "        # Otherwise, use parent's color handling\n",
+    "        # Use parent's color handling\n",
     "        return super().__getattr__(name)\n",
     "\n",
     "# Create the enhanced text factory\n",
@@ -1027,11 +954,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "202708dd-e517-4251-8321-19103607c6a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
+    "def test_typography_font_size_examples():\n",
+    "    \"\"\"Test font size utilities.\"\"\"\n",
+    "    assert str(text.xs) == \"text-xs\"\n",
+    "    assert str(text.sm) == \"text-sm\"\n",
+    "    assert str(text.base) == \"text-base\"\n",
+    "    assert str(text.lg) == \"text-lg\"\n",
+    "    assert str(text.xl) == \"text-xl\"\n",
+    "    assert str(text._2xl) == \"text-2xl\"\n",
+    "    assert str(text._3xl) == \"text-3xl\"\n",
+    "    assert str(text._4xl) == \"text-4xl\"\n",
+    "    assert str(text._5xl) == \"text-5xl\"\n",
+    "    assert str(text._6xl) == \"text-6xl\"\n",
+    "    assert str(text._7xl) == \"text-7xl\"\n",
+    "    assert str(text._8xl) == \"text-8xl\"\n",
+    "    assert str(text._9xl) == \"text-9xl\"\n",
+    "    \n",
+    "    # Arbitrary values\n",
+    "    assert str(text(\"10px\")) == \"text-[10px]\"\n",
+    "    assert str(text(\"1.5rem\")) == \"text-[1.5rem]\"\n",
+    "    assert str(text(\"--custom-size\")) == \"text-(--custom-size)\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_typography_font_size_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "84d010f8-d2ed-4b64-b41c-6e165c9335bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_text_color_examples():\n",
     "    \"\"\"Test text color utilities.\"\"\"\n",
     "    # Standard colors\n",
@@ -1205,7 +1165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_text_decoration_examples():\n",
     "    \"\"\"Test text decoration utilities.\"\"\"\n",
     "    # Decoration lines\n",
@@ -1307,7 +1267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_underline_offset_examples():\n",
     "    \"\"\"Test underline offset utilities.\"\"\"    \n",
     "    # Underline offset\n",
@@ -1356,7 +1316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_text_transform_examples():\n",
     "    \"\"\"Test text transform utilities.\"\"\"    \n",
     "    # Text transform\n",
@@ -1399,7 +1359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_text_overflow_examples():\n",
     "    \"\"\"Test text overflow utilities.\"\"\"\n",
     "    # Text overflow\n",
@@ -1442,7 +1402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_text_wrap_examples():\n",
     "    \"\"\"Test text wrap utilities.\"\"\"\n",
     "    \n",
@@ -1485,7 +1445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_text_indent_examples():\n",
     "    \"\"\"Test text indent utilities.\"\"\"\n",
     "        \n",
@@ -1541,7 +1501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_vertical_align_examples():\n",
     "    \"\"\"Test vertical align utilities.\"\"\"\n",
     "    \n",
@@ -1597,7 +1557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_whitespace_examples():\n",
     "    \"\"\"Test whitespace utilities.\"\"\"\n",
     "    \n",
@@ -1643,7 +1603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_word_break_examples():\n",
     "    \"\"\"Test word break utilities.\"\"\"\n",
     "    \n",
@@ -1686,7 +1646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_overflow_wrap_examples():\n",
     "    \"\"\"Test overflow wrap utilities.\"\"\"\n",
     "    \n",
@@ -1734,7 +1694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_hyphens_examples():\n",
     "    \"\"\"Test hyphens utilities.\"\"\"\n",
     "    \n",
@@ -1831,7 +1791,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_typography_content_examples():\n",
     "    \"\"\"Test content utilities for pseudo-elements.\"\"\"\n",
     "    assert str(content.none) == \"content-none\"\n",
@@ -1877,16 +1837,47 @@
    "execution_count": null,
    "id": "3e9f1474-775c-4bc7-8e99-8a3a280620a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "  <h1 class=\"text-4xl font-bold text-gray-900 tracking-tight leading-8\">Welcome to Our Site</h1>\n",
+       "  <p class=\"text-base text-gray-600 leading-7 text-justify\">This is a sample paragraph with various text styles applied.</p>\n",
+       "<a href=\"#\" class=\"text-blue-600 underline decoration-dotted decoration-2 font-medium\">Click here</a>  <div class=\"truncate max-w-xs\">This is a very long text that should be truncated with an ellipsis when it overflows the container width.</div>\n",
+       "  <p class=\"line-clamp-3\">This is a longer paragraph that spans multiple lines. It will be clamped to show only 3 lines with an ellipsis at the end if the content exceeds that limit.</p>\n",
+       "  <div class=\"font-mono text-sm text-gray-800 whitespace-pre bg-gray-100 p-4 rounded\">const greeting = &#x27;Hello, World!&#x27;;</div>\n",
+       "  <ul class=\"list-disc list-inside text-gray-700\">\n",
+       "    <li>First item</li>\n",
+       "    <li>Second item</li>\n",
+       "    <li>Third item</li>\n",
+       "  </ul>\n",
+       "<span class=\"uppercase tracking-wider\">uppercase text</span>  <blockquote class=\"text-lg italic text-gray-600 indent-8 border-l-4 border-gray-300 pl-4\">The only way to do great work is to love what you do.</blockquote>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((h1(('Welcome to Our Site',),{'class': 'text-4xl font-bold text-gray-900 tracking-tight leading-8'}), p(('This is a sample paragraph with various text styles applied.',),{'class': 'text-base text-gray-600 leading-7 text-justify'}), a(('Click here',),{'href': '#', 'class': 'text-blue-600 underline decoration-dotted decoration-2 font-medium'}), div(('This is a very long text that should be truncated with an ellipsis when it overflows the container width.',),{'class': 'truncate max-w-xs'}), p(('This is a longer paragraph that spans multiple lines. It will be clamped to show only 3 lines with an ellipsis at the end if the content exceeds that limit.',),{'class': 'line-clamp-3'}), div((\"const greeting = 'Hello, World!';\",),{'class': 'font-mono text-sm text-gray-800 whitespace-pre bg-gray-100 p-4 rounded'}), ul((li(('First item',),{}), li(('Second item',),{}), li(('Third item',),{})),{'class': 'list-disc list-inside text-gray-700'}), span(('uppercase text',),{'class': 'uppercase tracking-wider'}), blockquote(('The only way to do great work is to love what you do.',),{'class': 'text-lg italic text-gray-600 indent-8 border-l-4 border-gray-300 pl-4'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_typography_practical_examples():\n",
+    "#|exports\n",
+    "def test_typography_fasthtml_examples():\n",
     "    \"\"\"Test typography utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import H1, H2, P, Div, Span, A, Ul, Li, Blockquote\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import max_w\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded, border, border_color\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Heading with multiple typography utilities\n",
     "    heading = H1(\n",
@@ -2003,8 +1994,79 @@
     "    assert \"italic\" in quote.attrs['class']\n",
     "    assert \"indent-8\" in quote.attrs['class']\n",
     "\n",
+    "    return Div(\n",
+    "        heading,\n",
+    "        paragraph,\n",
+    "        link,\n",
+    "        truncated,\n",
+    "        clamped,\n",
+    "        code,\n",
+    "        custom_list,\n",
+    "        transformed,\n",
+    "        quote,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
+    "\n",
     "# Run the tests\n",
-    "test_typography_practical_examples()"
+    "test_typography_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f76ee26-5456-4ab4-ad9a-d9d91f4f6542",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_typography_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
