--- a/nbs/utilities/accessibility.ipynb
+++ b/nbs/utilities/accessibility.ipynb
@@ -43,7 +43,12 @@
     "from cjm_fasthtml_tailwind.core.base import (\n",
     "    SingleValueFactory, combine_classes\n",
     ")\n",
-    "from cjm_fasthtml_tailwind.builders.scales import SimpleFactory"
+    "from cjm_fasthtml_tailwind.builders.scales import SimpleFactory\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -84,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_accessibility_forced_color_adjust_examples(\n",
     "):\n",
     "    \"\"\"Test forced color adjust utilities.\"\"\"\n",
@@ -125,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_accessibility_screen_reader_examples(\n",
     "):\n",
     "    \"\"\"Test screen reader utilities imported from layout module.\"\"\"\n",
@@ -152,16 +157,187 @@
    "execution_count": null,
    "id": "b565b761-4048-4543-8c3c-43cc5ba28e7d",
    "metadata": {},
-   "outputs": [],
-   "source": "#| export\ndef test_accessibility_practical_examples(\n):\n    \"\"\"Test accessibility utilities in practical FastHTML component examples.\"\"\"\n    from fasthtml.common import Div, Button, Span, Input, Label, Nav, A\n    from cjm_fasthtml_tailwind.utilities.layout import position, top, left, display_tw\n    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n    from cjm_fasthtml_tailwind.utilities.spacing import p\n    from cjm_fasthtml_tailwind.utilities.borders import rounded, border, border_color\n    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n    from cjm_fasthtml_tailwind.utilities.typography import text\n    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import animate\n    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, items\n    from cjm_fasthtml_tailwind.core.base import combine_classes\n    from cjm_fasthtml_tailwind.utilities.layout import sr_only, not_sr_only\n    from cjm_fasthtml_tailwind.utilities.accessibility import forced_color_adjust\n    \n    # Skip link for keyboard navigation\n    skip_link = A(\n        \"Skip to main content\",\n        href=\"#main-content\",\n        cls=combine_classes(\n            sr_only,\n            not_sr_only.focus,\n            position.absolute.focus,\n            top(4).focus,\n            left(4).focus,\n            bg.white,\n            p(2),\n            rounded.full\n        )\n    )\n    assert \"sr-only\" in skip_link.attrs['class']\n    assert \"focus:not-sr-only\" in skip_link.attrs['class']\n    \n    # Form with screen reader only label\n    form_field = Div(\n        Label(\"Search\", cls=str(sr_only), for_=\"search\"),\n        Input(\n            type=\"search\",\n            id=\"search\",\n            placeholder=\"Search...\",\n            cls=combine_classes(w.full, p.x(4), p.y(2), border._1, rounded.full)\n        )\n    )\n    assert form_field.children[0].attrs['class'] == \"sr-only\"\n    \n    # Icon button with screen reader text\n    icon_button = Button(\n        # Icon would go here (e.g., SVG)\n        Span(\"Close dialog\", cls=str(sr_only)),\n        cls=combine_classes(p(2), rounded.full, bg.gray._100.hover),\n        aria_label=\"Close dialog\"\n    )\n    assert icon_button.children[0].attrs['class'] == \"sr-only\"\n    \n    # Navigation with forced color adjustments\n    high_contrast_nav = Nav(\n        A(\"Home\", href=\"/\", cls=combine_classes(forced_color_adjust.none, text.blue._600)),\n        A(\"About\", href=\"/about\", cls=combine_classes(forced_color_adjust.none, text.blue._600)),\n        A(\"Contact\", href=\"/contact\", cls=combine_classes(forced_color_adjust.none, text.blue._600)),\n        cls=combine_classes(forced_color_adjust.auto, display_tw.flex, gap(4))\n    )\n    assert high_contrast_nav.attrs['class'] == \"forced-color-adjust-auto flex gap-4\"\n    assert \"forced-color-adjust-none\" in high_contrast_nav.children[0].attrs['class']\n    \n    # Loading spinner with screen reader text\n    loading_spinner = Div(\n        Div(cls=combine_classes(\n            animate.spin,\n            h(5),\n            w(5),\n            border._2,\n            border_color.gray._900,\n            rounded.full,\n            border_color.t.transparent\n        )),\n        Span(\"Loading...\", cls=str(sr_only)),\n        cls=combine_classes(display_tw.inline_flex, items.center)\n    )\n    assert loading_spinner.children[1].attrs['class'] == \"sr-only\"\n\n# Run the tests\ntest_accessibility_practical_examples()"
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "<a href=\"#main-content\" class=\"sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 bg-white p-2 rounded-full\">Skip to main content</a>  <div>\n",
+       "<label for-=\"search\" class=\"sr-only\">Search</label>    <input type=\"search\" placeholder=\"Search...\" id=\"search\" class=\"w-full px-4 py-2 border-1 rounded-full\" name=\"search\">\n",
+       "  </div>\n",
+       "<button aria-label=\"Close dialog\" class=\"p-2 rounded-full hover:bg-gray-100\"><span class=\"sr-only\">Close dialog</span></button>  <nav class=\"forced-color-adjust-auto flex gap-4\">\n",
+       "<a href=\"/\" class=\"forced-color-adjust-none text-blue-600\">Home</a><a href=\"/about\" class=\"forced-color-adjust-none text-blue-600\">About</a><a href=\"/contact\" class=\"forced-color-adjust-none text-blue-600\">Contact</a>  </nav>\n",
+       "  <div class=\"inline-flex items-center\">\n",
+       "    <div class=\"animate-spin h-5 w-5 border-2 border-gray-900 rounded-full border-t-transparent\"></div>\n",
+       "<span class=\"sr-only\">Loading...</span>  </div>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((a(('Skip to main content',),{'href': '#main-content', 'class': 'sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 bg-white p-2 rounded-full'}), div((label(('Search',),{'for-': 'search', 'class': 'sr-only'}), input((),{'type': 'search', 'placeholder': 'Search...', 'id': 'search', 'class': 'w-full px-4 py-2 border-1 rounded-full', 'name': 'search'})),{}), button((span(('Close dialog',),{'class': 'sr-only'}),),{'aria-label': 'Close dialog', 'class': 'p-2 rounded-full hover:bg-gray-100'}), nav((a(('Home',),{'href': '/', 'class': 'forced-color-adjust-none text-blue-600'}), a(('About',),{'href': '/about', 'class': 'forced-color-adjust-none text-blue-600'}), a(('Contact',),{'href': '/contact', 'class': 'forced-color-adjust-none text-blue-600'})),{'class': 'forced-color-adjust-auto flex gap-4'}), div((div((),{'class': 'animate-spin h-5 w-5 border-2 border-gray-900 rounded-full border-t-transparent'}), span(('Loading...',),{'class': 'sr-only'})),{'class': 'inline-flex items-center'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#|exports\n",
+    "def test_accessibility_fasthtml_examples(\n",
+    "):\n",
+    "    \"\"\"Test accessibility utilities in practical FastHTML component examples.\"\"\"\n",
+    "    from fasthtml.common import Div, Button, Span, Input, Label, Nav, A\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position, top, left, display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import rounded, border, border_color\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import animate\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, items\n",
+    "    from cjm_fasthtml_tailwind.core.base import combine_classes\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import sr_only, not_sr_only\n",
+    "    from cjm_fasthtml_tailwind.utilities.accessibility import forced_color_adjust\n",
+    "    \n",
+    "    # Skip link for keyboard navigation\n",
+    "    skip_link = A(\n",
+    "        \"Skip to main content\",\n",
+    "        href=\"#main-content\",\n",
+    "        cls=combine_classes(\n",
+    "            sr_only,\n",
+    "            not_sr_only.focus,\n",
+    "            position.absolute.focus,\n",
+    "            top(4).focus,\n",
+    "            left(4).focus,\n",
+    "            bg.white,\n",
+    "            p(2),\n",
+    "            rounded.full\n",
+    "        )\n",
+    "    )\n",
+    "    assert \"sr-only\" in skip_link.attrs['class']\n",
+    "    assert \"focus:not-sr-only\" in skip_link.attrs['class']\n",
+    "    \n",
+    "    # Form with screen reader only label\n",
+    "    form_field = Div(\n",
+    "        Label(\"Search\", cls=str(sr_only), for_=\"search\"),\n",
+    "        Input(\n",
+    "            type=\"search\",\n",
+    "            id=\"search\",\n",
+    "            placeholder=\"Search...\",\n",
+    "            cls=combine_classes(w.full, p.x(4), p.y(2), border._1, rounded.full)\n",
+    "        )\n",
+    "    )\n",
+    "    assert form_field.children[0].attrs['class'] == \"sr-only\"\n",
+    "    \n",
+    "    # Icon button with screen reader text\n",
+    "    icon_button = Button(\n",
+    "        # Icon would go here (e.g., SVG)\n",
+    "        Span(\"Close dialog\", cls=str(sr_only)),\n",
+    "        cls=combine_classes(p(2), rounded.full, bg.gray._100.hover),\n",
+    "        aria_label=\"Close dialog\"\n",
+    "    )\n",
+    "    assert icon_button.children[0].attrs['class'] == \"sr-only\"\n",
+    "    \n",
+    "    # Navigation with forced color adjustments\n",
+    "    high_contrast_nav = Nav(\n",
+    "        A(\"Home\", href=\"/\", cls=combine_classes(forced_color_adjust.none, text.blue._600)),\n",
+    "        A(\"About\", href=\"/about\", cls=combine_classes(forced_color_adjust.none, text.blue._600)),\n",
+    "        A(\"Contact\", href=\"/contact\", cls=combine_classes(forced_color_adjust.none, text.blue._600)),\n",
+    "        cls=combine_classes(forced_color_adjust.auto, display_tw.flex, gap(4))\n",
+    "    )\n",
+    "    assert high_contrast_nav.attrs['class'] == \"forced-color-adjust-auto flex gap-4\"\n",
+    "    assert \"forced-color-adjust-none\" in high_contrast_nav.children[0].attrs['class']\n",
+    "    \n",
+    "    # Loading spinner with screen reader text\n",
+    "    loading_spinner = Div(\n",
+    "        Div(cls=combine_classes(\n",
+    "            animate.spin,\n",
+    "            h(5),\n",
+    "            w(5),\n",
+    "            border._2,\n",
+    "            border_color.gray._900,\n",
+    "            rounded.full,\n",
+    "            border_color.t.transparent\n",
+    "        )),\n",
+    "        Span(\"Loading...\", cls=str(sr_only)),\n",
+    "        cls=combine_classes(display_tw.inline_flex, items.center)\n",
+    "    )\n",
+    "    assert loading_spinner.children[1].attrs['class'] == \"sr-only\"\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        skip_link,\n",
+    "        form_field,\n",
+    "        icon_button,\n",
+    "        high_contrast_nav,\n",
+    "        loading_spinner,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
+    "\n",
+    "# Run the tests\n",
+    "test_accessibility_fasthtml_examples()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "122f9ae7-6877-4da7-a170-f9681f73aba1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_accessibility_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
+   ]
   },
   {
    "cell_type": "code",
@@ -257,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_accessibility_helper_examples(\n",
     "):\n",
     "    \"\"\"Test helper functions for common accessibility patterns.\"\"\"\n",
