--- a/nbs/utilities/borders.ipynb
+++ b/nbs/utilities/borders.ipynb
@@ -47,7 +47,12 @@
     "    NamedScale\n",
     ")\n",
     "from cjm_fasthtml_tailwind.builders.scales import ScaledFactory, ScaleConfig\n",
-    "from cjm_fasthtml_tailwind.builders.colors import ColoredFactory, ColorValue"
+    "from cjm_fasthtml_tailwind.builders.colors import ColoredFactory, ColorValue\n",
+    "\n",
+    "from fasthtml.common import Div\n",
+    "from fasthtml.jupyter import JupyUvi, HTMX\n",
+    "from cjm_fasthtml_tailwind.core.testing import create_test_app, create_test_page, start_test_server\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -224,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_radius_examples():\n",
     "    \"\"\"Test border radius utilities with all variants.\"\"\"\n",
     "    # Test all corners\n",
@@ -522,7 +527,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_width_examples():\n",
     "    \"\"\"Test border width utilities with all variants.\"\"\"\n",
     "    # Test default border (1px)\n",
@@ -652,7 +657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_divide_examples():\n",
     "    \"\"\"Test divide utilities for adding borders between children.\"\"\"\n",
     "    # Test default divide (1px)\n",
@@ -810,7 +815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_color_examples():\n",
     "    \"\"\"Test border color utilities with all variants.\"\"\"\n",
     "    # Test basic colors for all sides\n",
@@ -930,7 +935,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_divide_color_examples():\n",
     "    \"\"\"Test divide color utilities for borders between children.\"\"\"\n",
     "    # Test basic colors\n",
@@ -1044,7 +1049,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_style_examples():\n",
     "    \"\"\"Test border style utilities.\"\"\"\n",
     "    assert str(border_style.solid) == \"border-solid\"\n",
@@ -1113,7 +1118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_divide_style_examples():\n",
     "    \"\"\"Test divide style utilities.\"\"\"\n",
     "    assert str(divide_style.solid) == \"divide-solid\"\n",
@@ -1245,7 +1250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_outline_width_examples():\n",
     "    \"\"\"Test outline width utilities.\"\"\"\n",
     "    # Test default outline (1px)\n",
@@ -1320,7 +1325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_outline_color_examples():\n",
     "    \"\"\"Test outline color utilities.\"\"\"\n",
     "    # Test basic colors\n",
@@ -1436,7 +1441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_outline_style_examples():\n",
     "    \"\"\"Test outline style utilities.\"\"\"\n",
     "    assert str(outline_style.solid) == \"outline-solid\"\n",
@@ -1527,7 +1532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "def test_borders_outline_offset_examples():\n",
     "    \"\"\"Test outline offset utilities.\"\"\"\n",
     "    # Test numeric values\n",
@@ -1602,14 +1607,56 @@
    "execution_count": null,
    "id": "b0a4639f-d0b2-4988-a0ed-764a1e7ed05d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "  <article class=\"rounded-lg border border-gray-300 p-6\">\n",
+       "    <h3>Card Title</h3>\n",
+       "    <p>Card content goes here.</p>\n",
+       "  </article>\n",
+       "<button class=\"rounded-full border-2 border-blue-500 px-4 py-2\">Click me</button>  <div class=\"rounded-t-xl rounded-b-none border border-t-red-500 border-x-gray-300 border-b-transparent p-4\">Content</div>\n",
+       "  <ul class=\"divide-y-2 divide-gray-200 py-2\">\n",
+       "    <li>Item 1</li>\n",
+       "    <li>Item 2</li>\n",
+       "    <li>Item 3</li>\n",
+       "  </ul>\n",
+       "  <div class=\"flex divide-x divide-gray-400 border border-gray-400 rounded-lg overflow-hidden\">\n",
+       "<button>Left</button><button>Center</button><button>Right</button>  </div>\n",
+       "  <div class=\"border-t-4 border-r-2 border-b-0 border-l-2 border-t-red-600 border-r-blue-400 border-l-green-500 rounded-tl-xl rounded-tr-sm rounded-br-none rounded-bl-md p-4\">Complex borders</div>\n",
+       "  <article class=\"border-2 border-black/20 rounded-md p-4\">Semi-transparent border</article>\n",
+       "  <input type=\"text\" placeholder=\"Enter text\" class=\"border-2 border-gray-400 border-dashed rounded-md px-3 py-2\">\n",
+       "  <ul class=\"divide-y divide-gray-300 divide-dotted py-1\">\n",
+       "    <li>First item</li>\n",
+       "    <li>Second item</li>\n",
+       "    <li>Third item</li>\n",
+       "  </ul>\n",
+       "<button class=\"px-4 py-2 outline-none focus:outline-2 focus:outline-blue-500 focus:outline-offset-2\">Focus Me</button>  <link href=\"#\" class=\"inline-block px-3 py-1 outline outline-purple-400 outline-dashed outline-offset-1 rounded-sm\">Custom Link\n",
+       "  <div class=\"border-4 border-indigo-600 border-double rounded-lg p-6\">Double Border</div>\n",
+       "  <div tabindex=\"0\" class=\"outline-hidden focus:outline-2 focus:outline-blue-500 p-4\">Accessible content</div>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((article((h3(('Card Title',),{}), p(('Card content goes here.',),{})),{'class': 'rounded-lg border border-gray-300 p-6'}), button(('Click me',),{'class': 'rounded-full border-2 border-blue-500 px-4 py-2'}), div(('Content',),{'class': 'rounded-t-xl rounded-b-none border border-t-red-500 border-x-gray-300 border-b-transparent p-4'}), ul((li(('Item 1',),{}), li(('Item 2',),{}), li(('Item 3',),{})),{'class': 'divide-y-2 divide-gray-200 py-2'}), div((button(('Left',),{}), button(('Center',),{}), button(('Right',),{})),{'class': 'flex divide-x divide-gray-400 border border-gray-400 rounded-lg overflow-hidden'}), div(('Complex borders',),{'class': 'border-t-4 border-r-2 border-b-0 border-l-2 border-t-red-600 border-r-blue-400 border-l-green-500 rounded-tl-xl rounded-tr-sm rounded-br-none rounded-bl-md p-4'}), article(('Semi-transparent border',),{'class': 'border-2 border-black/20 rounded-md p-4'}), input((),{'type': 'text', 'placeholder': 'Enter text', 'class': 'border-2 border-gray-400 border-dashed rounded-md px-3 py-2'}), ul((li(('First item',),{}), li(('Second item',),{}), li(('Third item',),{})),{'class': 'divide-y divide-gray-300 divide-dotted py-1'}), button(('Focus Me',),{'class': 'px-4 py-2 outline-none focus:outline-2 focus:outline-blue-500 focus:outline-offset-2'}), link(('Custom Link',),{'href': '#', 'class': 'inline-block px-3 py-1 outline outline-purple-400 outline-dashed outline-offset-1 rounded-sm'}), div(('Double Border',),{'class': 'border-4 border-indigo-600 border-double rounded-lg p-6'}), div(('Accessible content',),{'tabindex': '0', 'class': 'outline-hidden focus:outline-2 focus:outline-blue-500 p-4'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def test_borders_practical_examples():\n",
+    "#|exports\n",
+    "def test_borders_fasthtml_examples():\n",
     "    \"\"\"Test border utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Button, Card, Ul, Li, H3, P, Input, Link\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, overflow\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    from cjm_fasthtml_tailwind.core.base import combine_classes\n",
     "    \n",
     "    # Card with rounded corners and colored border\n",
@@ -1837,9 +1884,27 @@
     "        )\n",
     "    )\n",
     "    assert \"outline-hidden\" in accessible_container.attrs['class']\n",
+    "    \n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        card,\n",
+    "        button,\n",
+    "        container,\n",
+    "        list_with_dividers,\n",
+    "        button_group,\n",
+    "        complex_border,\n",
+    "        transparent_card,\n",
+    "        input_field,\n",
+    "        dotted_list,\n",
+    "        focus_button,\n",
+    "        custom_link,\n",
+    "        double_border_box,\n",
+    "        accessible_container,\n",
+    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "    )\n",
     "\n",
     "# Run the tests\n",
-    "test_borders_practical_examples()"
+    "test_borders_fasthtml_examples()"
    ]
   },
   {
@@ -1847,8 +1912,58 @@
    "execution_count": null,
    "id": "71576841-9c85-4ee4-ac08-313488dbcc9d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_borders_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
+   ]
   },
   {
    "cell_type": "code",
